# wrappy-crappy

./: .gitignore  README.md  pyproject.toml
examples/crpy_gws/: gws-email-attachments-scope.yaml  gws.yaml
examples/crpy_mock_devops/: agent-scope.yaml  devops-tool.yaml
examples/crpy_podman/: podman-scoped-example.yaml  podman.yaml
src/wrappy_crappy/: __init__.py  cli.py  enforce.py  loader.py  render.py  scope.py  tool_def.py
src/wrappy_crappy/discover/: discover.py
