[project]
name = "wrappy-crappy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dmitry Aminev", email = "voltterra@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
wrappy-crappy = "wrappy_crappy:main"

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"
